# hermes-custom-header-plugin

./: CHANGELOG.md  LICENSE  README.md  SECURITY.md  __init__.py  after-install.md  conftest.py  plugin.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  hermes-canary.yml
docs/: compatibility.md  olla-integration-proposal.md
tests/: test_hermes_integration.py  test_plugin.py
