[project]
name = "hermes-olla-sticky-sessions"
version = "0.1.0"
description = "Hermes Agent middleware for conversation-scoped Olla sticky sessions"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyyaml>=6.0",
    "ruff>=0.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
