[project]
name = "hermes-custom-header-plugin"
version = "0.1.0"
description = "Hermes Agent middleware for computed custom-provider request headers"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = [
    "hermes-agent",
    "llm",
    "middleware",
    "plugin",
    "custom-headers",
    "session-affinity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/shared-goals/hermes-custom-header-plugin"
Repository = "https://github.com/shared-goals/hermes-custom-header-plugin.git"
Issues = "https://github.com/shared-goals/hermes-custom-header-plugin/issues"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyyaml>=6.0",
    "ruff>=0.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
